:bug: [FE] html태그 overflow-y hidden 삭제
-

closes #S08P31A301-339


Former-commit-id: 58c5ecc936870fb47743eefe6d270bdaf68e2625

--- a/frontend/src/components/LoginPage/LoginInput.css
+++ b/frontend/src/components/LoginPage/LoginInput.css
@@ -61,25 +61,6 @@
   display: block;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  font-family: "Open Sans", sans-serif;
-}
 .login {
   position: absolute;
   top: 73%;
